@@ -1,6 +1,7 @@
 Revision history for Perl extension Wx.
 
 0.80
+	- Build fixes for Windows (both dmake and nmake).
 	- Prototype implementation of wxVariant and wxDataViewCtrl (2.9).
 
 0.79  Thu Oct 18 00:52:35 CEST 2007
